[workspace]
members = ["csta", "csta_core", "csta_derive", "csta_examples", "csta_montecarlo", "csta_tests", "csta_examples/ising", "csta_metropolis"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Carlos Femenias"]
license = "GPL-3.0-or-later"
readme = "./README.md"
repository = "https://github.com/Carlettos1/csta2"
