[package]
name = "csta"
version = "2.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
csta_core = { path = "../csta_core", version = "^2.0.0" }
csta_derive = { path = "../csta_derive", version = "^2.0.0" }
csta_montecarlo = { path = "../csta_montecarlo", version = "^2.0.0" }
csta_metropolis = { path = "../csta_metropolis", version = "^2.0.0" }

[features]
default = []
serde = ["csta_core/serde"]
