[package]
name = "csta_core"
version = "2.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "=1.0", optional = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde"]
