[package]
name = "csta_derive"
version = "2.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
name = "csta_derive"
proc-macro = true

[dependencies]
proc-macro2 = "=1.0"
quote = "=1.0"
syn = { version = "=2.0", features = ["full"] }
rand = "=0.9"

# to not have circular dependecies:
[dev-dependencies]
csta = { path = "../csta" }
