[package]
name = "csta_metropolis"
version = "2.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Adds metropolis and compatibility with montecarlo"

[dependencies]
csta_montecarlo = { path = "../csta_montecarlo", version = "^2.0.0" }
rand = "^0.9"