[package]
name = "csta_montecarlo"
version = "2.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Adds montecarlo iterator to randomly generate instances of a randomizable struct"

[dependencies]
rand = "^0.9"
csta_core = { path = "../csta_core", version = "^2.0.0" }